# jaq

./: README.md  TODOS.md  dune-project  jaq.opam
.github/workflows/: build-test-release.yml
lib/: dune  jaq.ml  read.mli
lib/filter/: ast.ml  dune  filter.ml  filter.mli  functioncall.ml  lexer.mll  parser.mly
lib/jaq/: args.ml  dune  error.ml  jaq.ml  print.ml  read.ml  read.mli  time.ml  util.ml
test/: dune  test_jaq.ml
test_data/: colors_small.json  filter.jaq
